--- a/azure-pipelines-full-tests.yml
+++ b/azure-pipelines-full-tests.yml
@@ -17,13 +17,15 @@ jobs:
   displayName: Automation Test (Profile Latest)
   timeoutInMinutes: 120
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-20.04'
   strategy:
     matrix:
       Python36:
         python.version: '3.6'
       Python38:
         python.version: '3.8'
+      Python39:
+        python.version: '3.9'
   steps:
     - template: .azure-pipelines/templates/automation_test.yml
       parameters:
@@ -35,13 +37,15 @@ jobs:
   displayName: Automation Test (Profile 2020-09-01)
   timeoutInMinutes: 120
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-20.04'
   strategy:
     matrix:
       Python36:
         python.version: '3.6'
       Python38:
         python.version: '3.8'
+      Python39:
+        python.version: '3.9'
   steps:
     - template: .azure-pipelines/templates/automation_test.yml
       parameters:
@@ -53,13 +57,15 @@ jobs:
   displayName: Automation Test (Profile 2019-03-01)
   timeoutInMinutes: 120
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-20.04'
   strategy:
     matrix:
       Python36:
         python.version: '3.6'
       Python38:
         python.version: '3.8'
+      Python39:
+        python.version: '3.9'
   steps:
     - template: .azure-pipelines/templates/automation_test.yml
       parameters:
@@ -71,13 +77,15 @@ jobs:
   displayName: Automation Test (Profile 2018-03-01)
   timeoutInMinutes: 120
   pool:
-    vmImage: 'ubuntu-16.04'
+    vmImage: 'ubuntu-20.04'
   strategy:
     matrix:
       Python36:
         python.version: '3.6'
       Python38:
         python.version: '3.8'
+      Python39:
+        python.version: '3.9'
   steps:
     - template: .azure-pipelines/templates/automation_test.yml
       parameters:
