[AppService] BREAKING CHANGE: az webapp list-runtimes: Add Dotnet6 support and update runtimes (#17967)
* Add dotnet 6 support

* Update runtime stacks to be same as Portal

* Change default back to .NET5

--- a/src/azure-cli/azure/cli/command_modules/appservice/resources/WebappRuntimeStacks.json
+++ b/src/azure-cli/azure/cli/command_modules/appservice/resources/WebappRuntimeStacks.json
@@ -27,6 +27,12 @@
             }
         },
         {
+            "displayName": "DOTNET|6.0",
+            "configs": {
+                "net_framework_version": "v6.0"
+            }
+        },
+        {
             "displayName": "node|10.6",
             "configs": {
                 "WEBSITE_NODE_DEFAULT_VERSION": "10.6.0"
@@ -51,9 +57,9 @@
             }
         },
         {
-            "displayName": "php|7.2",
+            "displayName": "node|14-lts",
             "configs": {
-                "php_version": "7.2"
+                "WEBSITE_NODE_DEFAULT_VERSION": "~14"
             }
         },
         {
@@ -83,14 +89,6 @@
             }
         },
         {
-            "displayName": "java|1.8|Tomcat|8.0",
-            "configs": {
-                "java_version": "1.8",
-                "java_container": "TOMCAT",
-                "java_container_version": "8.0"
-            }
-        },
-        {
             "displayName": "java|1.8|Tomcat|8.5",
             "configs": {
                 "java_version": "1.8",
@@ -115,19 +113,43 @@
             }
         },
         {
-            "displayName": "java|11|Tomcat|7.0",
+            "displayName": "java|7|Tomcat|7.0",
             "configs": {
-                "java_version": "11",
+                "java_version": "1.7",
                 "java_container": "TOMCAT",
                 "java_container_version": "7.0"
             }
         },
         {
-            "displayName": "java|11|Tomcat|8.0",
+            "displayName": "java|7|Tomcat|8.5",
+            "configs": {
+                "java_version": "1.7",
+                "java_container": "TOMCAT",
+                "java_container_version": "8.5"
+            }
+        },
+        {
+            "displayName": "java|7|Tomcat|9.0",
+            "configs": {
+                "java_version": "1.7",
+                "java_container": "TOMCAT",
+                "java_container_version": "9.0"
+            }
+        },
+        {
+            "displayName": "java|7|Java SE|8",
+            "configs": {
+                "java_version": "1.7",
+                "java_container": "JAVA",
+                "java_container_version": "SE"
+            }
+        },
+        {
+            "displayName": "java|11|Tomcat|7.0",
             "configs": {
                 "java_version": "11",
                 "java_container": "TOMCAT",
-                "java_container_version": "8.0"
+                "java_container_version": "7.0"
             }
         },
         {
@@ -172,6 +194,12 @@
             "displayName": "DOTNET|5.0",
             "configs": {
                 "linux_fx_version": "DOTNETCORE|5.0"
+            }
+        },
+        {
+            "displayName": "DOTNET|6.0",
+            "configs": {
+                "linux_fx_version": "DOTNETCORE|6.0"
             }
         },
         {
@@ -247,15 +275,27 @@
             }
         },
         {
-            "displayName": "JBOSSEAP|7.2-java8",
+            "displayName": "JBOSSEAP|7-java8",
             "configs": {
-                "linux_fx_version": "JBOSSEAP|7.2-java8"
+                "linux_fx_version": "JBOSSEAP|7-java8"
             }
         },
         {
-            "displayName": "PHP|7.2",
+            "displayName": "JBOSSEAP|7.3-java8",
             "configs": {
-                "linux_fx_version": "PHP|7.2"
+                "linux_fx_version": "JBOSSEAP|7.3-java8"
+            }
+        },
+        {
+            "displayName": "JBOSSEAP|7-java11",
+            "configs": {
+                "linux_fx_version": "JBOSSEAP|7-java11"
+            }
+        },
+        {
+            "displayName": "JBOSSEAP|7.3-java11",
+            "configs": {
+                "linux_fx_version": "JBOSSEAP|7.3-java11"
             }
         },
         {
