--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -12,7 +12,7 @@
 /scripts/ @fengzhou-msft @jiasli
 /scripts/live_test @qwordy
 /src/azure-cli-testsdk/ @jsntcy @jiasli @kairu-ms @qwordy
-/src/azure-cli-core/ @jiasli @Juliehzl @fengzhou-msft @evelyn-ys @jsntcy @houk-ms
+/src/azure-cli-core/ @jiasli @Juliehzl @fengzhou-msft @evelyn-ys @jsntcy @houk-ms @kairu-ms
 /src/azure-cli-core/azure/cli/core/extension/ @msyyc
 /src/azure-cli/azure/cli/command_modules/acr/ @djyou @fengzhou-msft @yungezz
 /src/azure-cli/azure/cli/command_modules/acs/ @rjtsdl @fengzhou-msft
