Removed merge conflicts

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,17 +9,7 @@
             "program": "${workspaceRoot}/src/azure-cli/azure/cli/__main__.py",
             "cwd": "${workspaceRoot}",
             "args": [
-                "ts",
-                "create",
-                "-g",
-                "TemplateSpecsCLI",
-                "--name",
-                "TemplateSpecsGATest",
-                "--version",
-                "3.0",
-                "--template-file",
-                "C:\\Users\\daetienn\\Desktop\\azure-cli\\src\\azure-cli\\azure\\cli\\command_modules\\resource\\tests\\latest\\template_spec_with_multiline_strings.json"
-
+                "--help"
             ],
             "console": "integratedTerminal",
             "debugOptions": [
