--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -21,11 +21,11 @@
 /src/azure-cli/azure/cli/command_modules/acs/ @fengzhou-msft @zqingqing1 @gtracer @xizhamsft @andyliuliming
 /src/azure-cli/azure/cli/command_modules/advisor/ @Prasanna-Padmanabhan
 /src/azure-cli/azure/cli/command_modules/apim/ @kevinhillinger @jonlester
-/src/azure-cli/azure/cli/command_modules/appconfig/ @shenmuxiaosen @avanigupta @qwordy
+/src/azure-cli/azure/cli/command_modules/appconfig/ @shenmuxiaosen @avanigupta @qwordy @zhoxing-ms
 /src/azure-cli/azure/cli/command_modules/appservice/ @qwordy @Juliehzl
 /src/azure-cli/azure/cli/command_modules/aro/ @mjudeikis @jim-minter
 /src/azure-cli/azure/cli/command_modules/backup/ @dragonfly91 @fengzhou-msft @qwordy @akshayneema
-/src/azure-cli/azure/cli/command_modules/batch/ @bgklein @gingi @dpwatrous @paterasMSFT @qwordy
+/src/azure-cli/azure/cli/command_modules/batch/ @bgklein @gingi @dpwatrous @paterasMSFT @qwordy @zhoxing-ms
 /src/azure-cli/azure/cli/command_modules/batchai/ @AlexanderYukhanov
 /src/azure-cli/azure/cli/command_modules/cloud/ @jiasli @fengzhou-msft @Juliehzl
 /src/azure-cli/azure/cli/command_modules/consumption/ @sandeepnl
@@ -52,7 +52,7 @@
 /src/azure-cli/azure/cli/command_modules/role/ @jiasli @evelyn-ys @jsntcy @fengzhou-msft
 /src/azure-cli/azure/cli/command_modules/search/ @huangbolun @kairu-ms
 /src/azure-cli/azure/cli/command_modules/servicebus/ @v-ajnava @fengzhou-msft
-/src/azure-cli/azure/cli/command_modules/servicefabric/ @QingChenmsft @qwordy
+/src/azure-cli/azure/cli/command_modules/servicefabric/ @QingChenmsft @qwordy @Juliehzl
 /src/azure-cli/azure/cli/command_modules/sql/ @jaredmoo @Juliehzl @evelyn-ys
 /src/azure-cli/azure/cli/command_modules/storage/ @Juliehzl @jsntcy @zhoxing-ms @evelyn-ys
 /src/azure-cli/azure/cli/command_modules/synapse/ @idear1203 @sunsw1994 @aim-for-better
