--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -22,7 +22,7 @@
 /src/azure-cli/azure/cli/command_modules/advisor/ @Prasanna-Padmanabhan
 /src/azure-cli/azure/cli/command_modules/apim/ @kevinhillinger @jonlester
 /src/azure-cli/azure/cli/command_modules/appconfig/ @shenmuxiaosen @avanigupta @qwordy @zhoxing-ms
-/src/azure-cli/azure/cli/command_modules/appservice/ @qwordy @Juliehzl
+/src/azure-cli/azure/cli/command_modules/appservice/ @Juliehzl @panchagnula
 /src/azure-cli/azure/cli/command_modules/aro/ @mjudeikis @jim-minter
 /src/azure-cli/azure/cli/command_modules/backup/ @dragonfly91 @fengzhou-msft @qwordy @akshayneema
 /src/azure-cli/azure/cli/command_modules/batch/ @bgklein @gingi @dpwatrous @paterasMSFT @qwordy @zhoxing-ms
