--- a/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_create_template_specs_with_artifacts.yaml
+++ b/src/azure-cli/azure/cli/command_modules/resource/tests/latest/recordings/test_create_template_specs_with_artifacts.yaml
@@ -13,7 +13,7 @@ interactions:
       ParameterSetName:
       - -g -n -v -l -f --ui-form-definition -d --description --version-description
       User-Agent:
-      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002/versions/1.0?api-version=2021-05-01
   response:
@@ -29,7 +29,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 19 May 2021 03:20:49 GMT
+      - Wed, 19 May 2021 08:35:40 GMT
       expires:
       - '-1'
       pragma:
@@ -57,7 +57,7 @@ interactions:
       ParameterSetName:
       - -g -n -v -l -f --ui-form-definition -d --description --version-description
       User-Agent:
-      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002?api-version=2021-05-01
   response:
@@ -73,7 +73,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 19 May 2021 03:20:49 GMT
+      - Wed, 19 May 2021 08:35:40 GMT
       expires:
       - '-1'
       pragma:
@@ -106,16 +106,16 @@ interactions:
       ParameterSetName:
       - -g -n -v -l -f --ui-form-definition -d --description --version-description
       User-Agent:
-      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002?api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
         {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-05-19T03:20:52.017828Z\",\r\n    \"lastModifiedBy\":
+        \"User\",\r\n    \"createdAt\": \"2021-05-19T08:35:42.2927393Z\",\r\n    \"lastModifiedBy\":
         \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-05-19T03:20:52.017828Z\"\r\n  },\r\n  \"properties\": {\r\n    \"displayName\":
+        \"2021-05-19T08:35:42.2927393Z\"\r\n  },\r\n  \"properties\": {\r\n    \"displayName\":
         \"create-spec000003\",\r\n    \"description\": \"AzCLI test root template
         spec\"\r\n  },\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002\",\r\n
         \ \"type\": \"Microsoft.Resources/templateSpecs\",\r\n  \"name\": \"cli-test-create-template-spec000002\"\r\n}"
@@ -123,11 +123,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '832'
+      - '834'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 19 May 2021 03:20:51 GMT
+      - Wed, 19 May 2021 08:35:42 GMT
       expires:
       - '-1'
       pragma:
@@ -240,16 +240,16 @@ interactions:
       ParameterSetName:
       - -g -n -v -l -f --ui-form-definition -d --description --version-description
       User-Agent:
-      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002/versions/1.0?api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
         {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-05-19T03:20:53.3477206Z\",\r\n    \"lastModifiedBy\":
+        \"User\",\r\n    \"createdAt\": \"2021-05-19T08:35:43.3828074Z\",\r\n    \"lastModifiedBy\":
         \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-05-19T03:20:53.3477206Z\"\r\n  },\r\n  \"properties\": {\r\n    \"description\":
+        \"2021-05-19T08:35:43.3828074Z\"\r\n  },\r\n  \"properties\": {\r\n    \"description\":
         \"AzCLI test version of root template spec\",\r\n    \"uiFormDefinition\":
         {\r\n      \"$schema\": \"createFormUI.schema.json\",\r\n      \"view\": {\r\n
         \       \"kind\": \"Form\",\r\n        \"properties\": {\r\n          \"title\":
@@ -431,7 +431,7 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 19 May 2021 03:20:52 GMT
+      - Wed, 19 May 2021 08:35:43 GMT
       expires:
       - '-1'
       pragma:
@@ -461,21 +461,21 @@ interactions:
       ParameterSetName:
       - -g -n -v -f --yes
       User-Agent:
-      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourcegroups/cli_test_template_specs000001?api-version=2020-10-01
   response:
     body:
-      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001","name":"cli_test_template_specs000001","type":"Microsoft.Resources/resourceGroups","location":"westus","tags":{"product":"azurecli","cause":"automation","date":"2021-05-19T03:20:47Z","ic3":"ic3","NameTag":"ValueTag","StorageType":"Standard_LRS"},"properties":{"provisioningState":"Succeeded"}}'
+      string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001","name":"cli_test_template_specs000001","type":"Microsoft.Resources/resourceGroups","location":"westus","tags":{"product":"azurecli","cause":"automation","date":"2021-05-19T08:35:37Z","NameTag":"ValueTag","StorageType":"Standard_LRS"},"properties":{"provisioningState":"Succeeded"}}'
     headers:
       cache-control:
       - no-cache
       content-length:
-      - '490'
+      - '478'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 19 May 2021 03:20:53 GMT
+      - Wed, 19 May 2021 08:35:43 GMT
       expires:
       - '-1'
       pragma:
@@ -503,16 +503,16 @@ interactions:
       ParameterSetName:
       - -g -n -v -f --yes
       User-Agent:
-      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: GET
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002?api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
         {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-05-19T03:20:52.017828Z\",\r\n    \"lastModifiedBy\":
+        \"User\",\r\n    \"createdAt\": \"2021-05-19T08:35:42.2927393Z\",\r\n    \"lastModifiedBy\":
         \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-05-19T03:20:53.3477206Z\"\r\n  },\r\n  \"properties\": {\r\n    \"displayName\":
+        \"2021-05-19T08:35:43.3828074Z\"\r\n  },\r\n  \"properties\": {\r\n    \"displayName\":
         \"create-spec000003\",\r\n    \"description\": \"AzCLI test root template
         spec\"\r\n  },\r\n  \"id\": \"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002\",\r\n
         \ \"type\": \"Microsoft.Resources/templateSpecs\",\r\n  \"name\": \"cli-test-create-template-spec000002\"\r\n}"
@@ -520,11 +520,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '833'
+      - '834'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 19 May 2021 03:20:54 GMT
+      - Wed, 19 May 2021 08:35:43 GMT
       expires:
       - '-1'
       pragma:
@@ -611,16 +611,16 @@ interactions:
       ParameterSetName:
       - -g -n -v -f --yes
       User-Agent:
-      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: PUT
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002/versions/1.0?api-version=2021-05-01
   response:
     body:
       string: "{\r\n  \"location\": \"westus\",\r\n  \"tags\": {},\r\n  \"systemData\":
         {\r\n    \"createdBy\": \"daetienn@microsoft.com\",\r\n    \"createdByType\":
-        \"User\",\r\n    \"createdAt\": \"2021-05-19T03:20:53.3477206Z\",\r\n    \"lastModifiedBy\":
+        \"User\",\r\n    \"createdAt\": \"2021-05-19T08:35:43.3828074Z\",\r\n    \"lastModifiedBy\":
         \"daetienn@microsoft.com\",\r\n    \"lastModifiedByType\": \"User\",\r\n    \"lastModifiedAt\":
-        \"2021-05-19T03:20:54.8950016Z\"\r\n  },\r\n  \"properties\": {\r\n    \"uiFormDefinition\":
+        \"2021-05-19T08:35:44.758346Z\"\r\n  },\r\n  \"properties\": {\r\n    \"uiFormDefinition\":
         {\r\n      \"$schema\": \"createFormUI.schema.json\",\r\n      \"view\": {\r\n
         \       \"kind\": \"Form\",\r\n        \"properties\": {\r\n          \"title\":
         \"titleFooRG\",\r\n          \"steps\": [\r\n            {\r\n              \"name\":
@@ -797,11 +797,11 @@ interactions:
       cache-control:
       - no-cache
       content-length:
-      - '13856'
+      - '13855'
       content-type:
       - application/json; charset=utf-8
       date:
-      - Wed, 19 May 2021 03:20:54 GMT
+      - Wed, 19 May 2021 08:35:43 GMT
       expires:
       - '-1'
       pragma:
@@ -833,7 +833,7 @@ interactions:
       ParameterSetName:
       - --template-spec --yes
       User-Agent:
-      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/17.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
+      - AZURECLI/2.23.0 azsdk-python-azure-mgmt-resource/18.0.0 Python/3.8.10 (Windows-10-10.0.19043-SP0)
     method: DELETE
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_template_specs000001/providers/Microsoft.Resources/templateSpecs/cli-test-create-template-spec000002?api-version=2021-05-01
   response:
@@ -845,7 +845,7 @@ interactions:
       content-length:
       - '0'
       date:
-      - Wed, 19 May 2021 03:20:56 GMT
+      - Wed, 19 May 2021 08:35:47 GMT
       expires:
       - '-1'
       pragma:
